seaqt/QtWebKit/gen_qwebdatabase.h

class QWebDatabase;
class QWebSecurityOrigin;
typedef struct QWebDatabase QWebDatabase;
typedef struct QWebSecurityOrigin QWebSecurityOrigin;
QWebDatabase* QWebDatabase_new(QWebDatabase* from);
void QWebDatabase_operatorAssign(QWebDatabase* self, QWebDatabase* from);
struct seaqt_string QWebDatabase_name(const QWebDatabase* self);
struct seaqt_string QWebDatabase_displayName(const QWebDatabase* self);
long long QWebDatabase_expectedSize(const QWebDatabase* self);
long long QWebDatabase_size(const QWebDatabase* self);
struct seaqt_string QWebDatabase_fileName(const QWebDatabase* self);
QWebSecurityOrigin* QWebDatabase_origin(const QWebDatabase* self);
void QWebDatabase_removeDatabase(QWebDatabase* param1);
void QWebDatabase_removeAllDatabases();